[DP] Cleaning up commits and rebase

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -148,6 +148,18 @@ microservice {
       host = localhost
       port = 8570
     }
+
+    cachable {
+          session-cache {
+            host = localhost
+            port = 8400
+            domain = keystore
+          }
+    }
+
+    keystore {
+      host = "http://localhost:8400"
+    }
   }
 
   auth {
