[DP] Test progress 2

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -51,7 +51,7 @@ play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline'
 # PBIK service configuration
 pbik {
   enabled {
-    cy=true
+    cy=false
     eil=true
   }
   banner.date {
